# 3d-game-test

./: .gitignore  Cargo.toml  README.md
assets/animations/ch/: ch_idle.fbx  ch_shoved_reaction.fbx  ch_turn_l.fbx  ch_turn_r.fbx  ch_walk_b.fbx  ch_walk_f.fbx
assets/characters/ch/: ch.gltf  compile.conf
assets/terrains/: compile.conf  terrain_01.gltf
compiler/: Cargo.toml  compile.py
compiler/src/: blender.rs  config.rs  gltf.rs  main.rs  texture.rs  writer.rs
game/: Cargo.toml
game/src/: camera.rs  context.rs  depth_texture.rs  game.rs  logger.rs  main.rs  settings.rs  transform.rs  utils.rs  window.rs
game/src/assets/: animation.rs  armature.rs  assets.rs  instances.rs  joint.rs  mesh.rs  mod.rs  object.rs  reader.rs  texture.rs  transform.rs  vertex.rs
game/src/light/: mod.rs
game/src/light/directional/: mod.rs
game/src/light/directional/basic_anim/: mod.rs  shader.wgsl
game/src/light/directional/terrain/: mod.rs  shader.wgsl
game/src/shaders/: mod.rs
game/src/shaders/basic_anim/: material.rs  mod.rs
game/src/shaders/terrain/: material.rs  mod.rs  shader.wgsl
game/src/ui/: mod.rs
game/src/ui/square/: mod.rs  shader.rs  shader.wgsl
