[package]
name = "nexodia"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.14.0"
winit = "0.27.3"
log = "0.4.17"
futures = "0.3"
bytemuck = { version = "1.8", features = ["derive"] }
cgmath = "0.18.0"
bitflags = "1.3.2"
image = { version = "0.24", features = ["png", "jpeg"] }
json = "0.12.4"
directories = "4.0.1"
env_logger = "0.10.0"
chrono = "0.4.23"